@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Fixed displaying photos in rendered vCard files.
 * [jan] Fix detecting capability to list users if called via RPC (Bug #12305).
 * [mms] Clear cached previews in dynamic view when changing quicksearch parameters.
 * [mms] Fix adding an HTML trailer to a compose message.
@@ -3229,6 +3230,7 @@
    <date>2013-06-12</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Fixed displaying photos in rendered vCard files.
 * [jan] Fix detecting capability to list users if called via RPC (Bug #12305).
 * [mms] Clear cached previews in dynamic view when changing quicksearch parameters.
 * [mms] Fix adding an HTML trailer to a compose message.
