@@ -2,6 +2,7 @@
 v6.1.2-git
 ----------
 
+[jan] Fixed displaying photos in rendered vCard files.
 [jan] Fix detecting capability to list users if called via RPC (Bug #12305).
 [mms] Clear cached previews in dynamic view when changing quicksearch
       parameters.
